--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>
         <h1>サイト内におけるタイトル</h1>
     </header>
-     <footer>
-       <address>Copyright(C)ここに年 個人名or会社名</address>
-   　</footer>
+    <footer>
+        <address>Copyright(C)ここに年 個人名or会社名</address>
+　  </footer>
 </body>
 
-</html>
+</html>Ï
